--- a/social-simulation-project/Repast.settings
+++ b/social-simulation-project/Repast.settings
@@ -3,13 +3,15 @@
   <hashtable>
     <default>
       <loadFactor>0.75</loadFactor>
-      <threshold>8</threshold>
+      <threshold>5</threshold>
     </default>
-    <int>11</int>
-    <int>2</int>
+    <int>7</int>
+    <int>3</int>
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>C:\Users\Jakob\Documents\social-supply-chain-simulation\social-simulation-project\Social Simulation Project.rs</string>
+    <string>C:\Users\Dominik\Documents\social simulation\social-simulation-project\Social Simulation Project.rs</string>
+    <string>SettingsFileName</string>
+    <string>Repast.settings</string>
   </hashtable>
 </simphony.settings.SettingsRegistry>
