split up inventories; add production for intermediate companies

--- a/social-simulation-project/Repast.settings
+++ b/social-simulation-project/Repast.settings
@@ -12,6 +12,6 @@
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>/Users/carlosjansen/Code/social-supply-chain-simulation/social-simulation-project/Social Simulation Project.rs</string>
+    <string>C:\Users\Dominik\Documents\social simulation\social-simulation-project\Social Simulation Project.rs</string>
   </hashtable>
 </simphony.settings.SettingsRegistry>
