make consistency changes. changed variables name to one convention, etc.

--- a/social-simulation-project/Repast.settings
+++ b/social-simulation-project/Repast.settings
@@ -14,7 +14,7 @@
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>C:\Users\Dominik\Documents\social simulation\social-simulation-project\Social Simulation Project.rs</string>
+    <string>/Users/carlosjansen/Code/social-supply-chain-simulation/social-simulation-project/Social Simulation Project.rs</string>
     <string>Spreadsheet.home</string>
     <string>&quot;C:\Program Files\Microsoft Office 15\root\office15\EXCEL.EXE&quot;</string>
   </hashtable>
